// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pill matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Pill
    classes={
      Object {
        "assistiveText": "assistiveText",
        "bottom": "bottom",
        "container": "container",
        "disabled": "disabled",
        "errorAssistiveText": "errorAssistiveText",
        "errorIcon": "errorIcon",
        "label": "label",
        "left": "left",
        "pill": "pill",
        "pillGroup": "pillGroup",
        "selected": "selected",
        "top": "top",
      }
    }
    group={
      Array [
        Object {
          "id": 1,
          "label": "foo",
          "value": 10,
        },
        Object {
          "id": 2,
          "label": "bar",
          "value": 20,
        },
        Object {
          "id": 3,
          "label": "baz",
          "value": 30,
        },
        Object {
          "id": 4,
          "label": "qux",
          "value": 40,
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        undefined,
        <div
          className="pillGroup"
        >
          <button
            className="pill"
            onClick={[Function]}
          >
            foo
          </button>
          <button
            className="pill"
            onClick={[Function]}
          >
            bar
          </button>
          <button
            className="pill"
            onClick={[Function]}
          >
            baz
          </button>
          <button
            className="pill"
            onClick={[Function]}
          >
            qux
          </button>
        </div>,
        undefined,
      ],
      "className": "container",
    },
    "ref": null,
    "rendered": Array [
      undefined,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <button
              className="pill"
              onClick={[Function]}
            >
              foo
            </button>,
            <button
              className="pill"
              onClick={[Function]}
            >
              bar
            </button>,
            <button
              className="pill"
              onClick={[Function]}
            >
              baz
            </button>,
            <button
              className="pill"
              onClick={[Function]}
            >
              qux
            </button>,
          ],
          "className": "pillGroup",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "host",
            "props": Object {
              "children": "foo",
              "className": "pill",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "foo",
            "type": "button",
          },
          Object {
            "instance": null,
            "key": "2",
            "nodeType": "host",
            "props": Object {
              "children": "bar",
              "className": "pill",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "bar",
            "type": "button",
          },
          Object {
            "instance": null,
            "key": "3",
            "nodeType": "host",
            "props": Object {
              "children": "baz",
              "className": "pill",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "baz",
            "type": "button",
          },
          Object {
            "instance": null,
            "key": "4",
            "nodeType": "host",
            "props": Object {
              "children": "qux",
              "className": "pill",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "qux",
            "type": "button",
          },
        ],
        "type": "div",
      },
      undefined,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          undefined,
          <div
            className="pillGroup"
          >
            <button
              className="pill"
              onClick={[Function]}
            >
              foo
            </button>
            <button
              className="pill"
              onClick={[Function]}
            >
              bar
            </button>
            <button
              className="pill"
              onClick={[Function]}
            >
              baz
            </button>
            <button
              className="pill"
              onClick={[Function]}
            >
              qux
            </button>
          </div>,
          undefined,
        ],
        "className": "container",
      },
      "ref": null,
      "rendered": Array [
        undefined,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <button
                className="pill"
                onClick={[Function]}
              >
                foo
              </button>,
              <button
                className="pill"
                onClick={[Function]}
              >
                bar
              </button>,
              <button
                className="pill"
                onClick={[Function]}
              >
                baz
              </button>,
              <button
                className="pill"
                onClick={[Function]}
              >
                qux
              </button>,
            ],
            "className": "pillGroup",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "host",
              "props": Object {
                "children": "foo",
                "className": "pill",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "foo",
              "type": "button",
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "host",
              "props": Object {
                "children": "bar",
                "className": "pill",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "bar",
              "type": "button",
            },
            Object {
              "instance": null,
              "key": "3",
              "nodeType": "host",
              "props": Object {
                "children": "baz",
                "className": "pill",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "baz",
              "type": "button",
            },
            Object {
              "instance": null,
              "key": "4",
              "nodeType": "host",
              "props": Object {
                "children": "qux",
                "className": "pill",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "qux",
              "type": "button",
            },
          ],
          "type": "div",
        },
        undefined,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Pill styles matches the snapshot 1`] = `
Object {
  "assistiveText": Object {
    "color": "#aaaaaa",
  },
  "bottom": Object {
    "height": 20,
    "marginTop": 4,
  },
  "container": Object {
    "marginBottom": 8,
    "position": "relative",
  },
  "disabled": Object {
    "& $label": Object {
      "color": "#dddddd",
    },
    "& $pill": Object {
      "background": "#ffffff",
      "borderColor": "#f5f5f5",
      "color": "#dddddd",
      "pointerEvents": "none",
    },
  },
  "errorAssistiveText": Object {
    "color": "#fe4a49",
  },
  "errorIcon": Object {
    "marginBottom": -2,
  },
  "label": Object {
    "& a": Object {
      "color": "#1476fb",
      "outline": "none",
      "textDecoration": "none",
    },
    "color": "#222222",
    "fontFamily": "'Open Sans', sans-serif",
    "fontSize": 12,
    "lineHeight": "20px",
    "transition": "0.3s all",
  },
  "left": Object {
    "float": "left",
  },
  "pill": Object {
    "&:first-child": Object {
      "borderRadius": "16px 0 0 16px",
    },
    "&:hover": Object {
      "background": "#fafafa",
    },
    "&:last-child": Object {
      "borderRadius": "0 16px 16px 0",
    },
    "&:not(:first-child)": Object {
      "marginLeft": -1,
    },
    "background": "#ffffff",
    "border": "1px solid #dddddd",
    "cursor": "pointer",
    "flex": 1,
    "fontFamily": "'Open Sans', sans-serif",
    "fontSize": 14,
    "height": 32,
    "lineHeight": "24px",
    "outline": 0,
    "padding": 0,
    "position": "relative",
    "transition": "0.3s all",
    "zIndex": 0,
  },
  "pillGroup": Object {
    "display": "flex",
  },
  "selected": Object {
    "background": Array [
      "rgba(8, 60, 174, 0.1)",
      "!important",
    ],
    "borderColor": "#083cae",
    "zIndex": 1,
  },
  "top": Object {
    "&:after": Object {
      "clear": "both",
      "content": "\\"\\"",
    },
    "height": 24,
  },
}
`;

exports[`PillJSS matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Jss(Pill)
    group={
      Array [
        Object {
          "id": 1,
          "label": "foo",
          "value": 10,
        },
        Object {
          "id": 2,
          "label": "bar",
          "value": 20,
        },
        Object {
          "id": 3,
          "label": "baz",
          "value": 30,
        },
        Object {
          "id": 4,
          "label": "qux",
          "value": 40,
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "classes": Object {
        "assistiveText": "Pill-assistiveText-0-1-10",
        "bottom": "Pill-bottom-0-1-9",
        "container": "Pill-container-0-1-1",
        "disabled": "Pill-disabled-0-1-6",
        "errorAssistiveText": "Pill-errorAssistiveText-0-1-11",
        "errorIcon": "Pill-errorIcon-0-1-12",
        "label": "Pill-label-0-1-3",
        "left": "Pill-left-0-1-4",
        "pill": "Pill-pill-0-1-7",
        "pillGroup": "Pill-pillGroup-0-1-5",
        "selected": "Pill-selected-0-1-8",
        "top": "Pill-top-0-1-2",
      },
      "group": Array [
        Object {
          "id": 1,
          "label": "foo",
          "value": 10,
        },
        Object {
          "id": 2,
          "label": "bar",
          "value": 20,
        },
        Object {
          "id": 3,
          "label": "baz",
          "value": 30,
        },
        Object {
          "id": 4,
          "label": "qux",
          "value": 40,
        },
      ],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "classes": Object {
          "assistiveText": "Pill-assistiveText-0-1-10",
          "bottom": "Pill-bottom-0-1-9",
          "container": "Pill-container-0-1-1",
          "disabled": "Pill-disabled-0-1-6",
          "errorAssistiveText": "Pill-errorAssistiveText-0-1-11",
          "errorIcon": "Pill-errorIcon-0-1-12",
          "label": "Pill-label-0-1-3",
          "left": "Pill-left-0-1-4",
          "pill": "Pill-pill-0-1-7",
          "pillGroup": "Pill-pillGroup-0-1-5",
          "selected": "Pill-selected-0-1-8",
          "top": "Pill-top-0-1-2",
        },
        "group": Array [
          Object {
            "id": 1,
            "label": "foo",
            "value": 10,
          },
          Object {
            "id": 2,
            "label": "bar",
            "value": 20,
          },
          Object {
            "id": 3,
            "label": "baz",
            "value": 30,
          },
          Object {
            "id": 4,
            "label": "qux",
            "value": 40,
          },
        ],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
